<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.greenscreens</groupId>
  <artifactId>quark</artifactId>
  <version>7.0.0</version>
  <name>Green Screens Quark Engine</name>
  <url>https://www.greenscreens.io/quark</url>

  <organization>
  	<name>Green Screens Ltd.</name>
  	<url>https://www.greenscreens.io</url>
  </organization>

  <description>Just as quarks are building blocks which glues subatom particles into atoms, Quark Engine is a small, lite and fast elementary building block between web and Java server side.</description>

    <licenses>
        <license>
            <name>MIT</name>
            <url>https://github.com/greenscreens-io/quark-java/blob/master/LICENSE</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git@github.com:greenscreens-io/quark-java.git</connection>
        <developerConnection>scm:git:git@github.com:greenscreens-io/quark-java.git</developerConnection>
        <url>https://github.com/greenscreens-io/quark-java</url>
        <tag>HEAD</tag>
    </scm>

    <issueManagement>
        <system>Github</system>
        <url>https://github.com/greenscreens-io/quark-java/issues</url>
    </issueManagement>

    <distributionManagement>
       <repository>
         <id>github</id>
         <name>GitHub greenscreens-io Apache Maven Packages</name>
         <url>https://maven.pkg.github.com/greenscreens-io/quark-java</url>
       </repository>
    </distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<maven.compiler.version>3.11.0</maven.compiler.version>
		<maven.eclipse.plugin>2.10</maven.eclipse.plugin>
		<maven.install.plugin>3.0.0-M1</maven.install.plugin>
		<maven.recources.plugin>3.3.1</maven.recources.plugin>
		<maven.jar.version>3.2.0</maven.jar.version>
		<maven.war.version>3.3.1</maven.war.version>
		<maven.proguard.version>2.3.1</maven.proguard.version>
		<jackson.version>2.14.2</jackson.version>
		<bcastle.version>1.76</bcastle.version>
	</properties>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>${maven.eclipse.plugin}</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
	            <configuration>
	                <enablePreview>true</enablePreview>
	            </configuration>				
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>${maven.recources.plugin}</version>
			</plugin>

		</plugins>
	</build>
	
	<dependencies>
		<dependency>
			<groupId>jakarta.validation</groupId>
			<artifactId>jakarta.validation-api</artifactId>
			<version>3.0.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>6.0.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.websocket</groupId>
			<artifactId>jakarta.websocket-api</artifactId>
			<version>2.1.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.websocket</groupId>
			<artifactId>jakarta.websocket-client-api</artifactId>
			<version>2.1.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.enterprise</groupId>
			<artifactId>jakarta.enterprise.cdi-api</artifactId>
			<version>4.0.1</version>
			<scope>provided</scope>
		</dependency>	

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.30</version>
		</dependency>


		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk18on</artifactId>
			<version>${bcastle.version}</version>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk18on</artifactId>
			<version>${bcastle.version}</version>
		</dependency>

	</dependencies>  

</project>
